--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 class="1">Heading 1</h1>
+	<h2 class="2">Heading 2</h2>
+	<h3 class ="3">Heading 3</h3>
+	
+	<h4 class="4">Heading 4</h4>
+	<h5 class="5">Heading 5</h5>
+	<h6 class="6">Heading 6</h6>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
